# LLVM-Experiments

./: CMakeLists.txt  LLVMExperiments.cpp  ll.patch  ll2.patch
examples/: LUtils.hpp  add_function_attributes.cpp  optimize_module.cpp  read_meta.cpp
src/: Compiler.h  JIT.h  compiler.cpp  main.cpp  time_measure.h
